--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peter Chen</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Hello, World!</h1>
-        <p>This is a basic webpage example.</p>
+        <h1>Peter Chen</h1>
+        <img src="profile-compressed.detail.webp" alt="This is my favorite video game character">
     </div>
+<a href="https://www.linkedin.com/in/peter-chen-3a1172225/" target="_blank">My LinkedIn Profile</a>
 </body>
+<div class="section">
+        <h2>Education</h2>
+        <p><strong>University of California, Berkeley</strong><br>
+        Bachelor of Science in Computer Science<br>
+        Berkeley, CA<br>
+        June 2025</p>
+        <p>Cumulative GPA: 3.89/4.00</p>
+        <p>Relevant Coursework: Data structures, Designing information devices and systems, Optimization models in engineering, Intro to Artificial Intelligence, Machine structure, Computer security, Intro to software engineering</p>
+    </div>
+
+    <div class="section">
+        <h2>Work Experience</h2>
+        <p><strong>Tutor | University of California, Berkeley</strong><br>
+        August 2022 – December 2022</p>
+        <ul>
+            <li>Helped in weekly lab sections with 30+ students</li>
+            <li>Composed a Python guide with video walk-through for students with weak computer science background</li>
+            <li>Helped numerous students with conceptual or logistical questions</li>
+        </ul>
+    </div>
 </html>
